updated sglang schedule

--- a/src/components/SchedulesZh.astro
+++ b/src/components/SchedulesZh.astro
@@ -308,7 +308,7 @@ const getEventUrl = (title: string): string => {
                                             )}
                                         </div>
                                         <div class="card-tags group-tags">
-                                          {speaker.tags.map((tag) => (
+                                          {speaker.tags && speaker.tags.map((tag) => (
                                             <div class="single-tag">
                                               <p>{getCategoryNameFromTag(tag)}</p>
                                             </div>
@@ -445,7 +445,7 @@ const getEventUrl = (title: string): string => {
                                                 )}
                                             </div>
                                             <div class="card-tags group-tags">
-                                              {speaker.tags.map((tag) => (
+                                              {speaker.tags && speaker.tags.map((tag) => (
                                                 <div class="single-tag">
                                                   <p>
                                                     {getCategoryNameFromTag(tag)}
