reorganize into 3 major sections

--- a/src/pages/china-essentials.astro
+++ b/src/pages/china-essentials.astro
@@ -50,7 +50,7 @@ const mapMarkers = [
       <h1>China Essentials</h1>
       <br /><br />
 
-      <h2>Before You Go</h2>
+      <h2>✈️ Before You Go</h2>
       <br />
       It is recommended to either install an eSIM application on your phone before
       arriving, or upon arriving at the airport, to purchase a local China SIM card,
@@ -59,7 +59,20 @@ const mapMarkers = [
       take eSIMs)
       <br /><br />
 
-      <h3>Internet (eSIM)</h3>
+      <h3>TLDR</h3>
+      <br />
+      Download and setup these apps before you arrive in China:
+      <ul>
+        <li>➤ WeChat</li>
+        <li>➤ Alipay</li>
+        <li>➤ Didi</li>
+        <li>➤ Apple Maps or Amap (Gaode)</li>
+        <li>➤ eSIM app of your choice (if you plan to use eSIM)</li>
+        <li>➤ VPN app of your choice (if you plan to use VPN)</li>
+      </ul>
+      <br /><br />
+
+      <h2>📶 Internet & VPN</h2>
       <br />
       It is recommened to get an eSIM in order to use your mobile's data services
       for internet in China. The best deals are probably purchased ahead of time
@@ -97,8 +110,7 @@ const mapMarkers = [
         <li>➤ <a href="https://www.getnomad.app/china-eSIM">Nomad</a></li>
         <li>➤ <a href="https://saily.com/esim-china/">Sally</a></li>
       </ul>
-      <br /><br />
-
+      <br />
 
       <h3>VPN</h3>
       <br />
@@ -111,7 +123,7 @@ const mapMarkers = [
       Here are a list of VPN services that "should" work:
       <ul>
         <li>
-          ➤ <strong>Let's VPN</strong> - worked as of July. This can be a backup.
+          ➤ <strong>Let's VPN</strong> - worked as of July.
           It has a free trial period so you can make sure it works. After that, paid
           service 1 week price is only $2.99. Client available on iOS, MacOS, Android
           & Windows. (But 2 devices max)
@@ -127,7 +139,7 @@ const mapMarkers = [
       </ul>
       <br /><br />
 
-      <h3>Apps To Download</h3>
+      <h2>💶 Money & Payments</h2>
       <br />
       It's recommended to download the following apps ahead of time as they're very
       useful getting around in China.
@@ -183,41 +195,9 @@ const mapMarkers = [
           </ul>
         </li>
       </ul>
-      <br /><br />
-
-      <h3>Transportation Apps</h3>
       <br />
-      To get around in the city, you may use either public transport, or use an Uber-like
-      service. The main app for that is Didi.
-      <ul>
-        <li>
-          ➤ Didi <strong>[Highly Recommended]</strong>
-          <ul>
-            <li>
-              ➤ "Uber of China". Useful for calling cars to get around the city
-            </li>
-            <li>
-              ➤ Uber does not work in China market, so Didi is the main choice
-            </li>
-          </ul>
-        </li>
-      </ul>
-      <br /><br />
 
-      <h3>Navigation Apps</h3>
-      <br />
-      Although Google Maps works if you're using VPN, the map may not be as accurate,
-      and there may not be as much local data.
-      <br />
-      Alternative, Apple Maps works well in China. But the best ones are Gaode and
-      Baidu Maps for local map and navigation.
-      <ul>
-        <li>➤ Gaode Maps 高德地图</li>
-        <li>➤ Baidu Maps 百度地图</li>
-      </ul>
-      <br /><br />
-
-      <h3>Payment</h3>
+      <h3>Payments</h3>
       <br />
       China is mostly a cashless country now, most people use Alipay and/or WeChat
       Pay to bind your foreign credit card with the payment apps.
@@ -236,8 +216,7 @@ const mapMarkers = [
           >
         </li>
       </ul>
-      <br /><br />
-
+      <br />
       <h3>Currency</h3>
       <br />
       If you have WeChat and/or Alipay setup ahead of time (registered and added
@@ -245,88 +224,150 @@ const mapMarkers = [
       (RMB) in China.
       <br /><br />
 
-      <h2>Tourism</h2>
+      <h2>📍 Getting Around</h2>
       <br />
-      China is huge, so varieties of places to visit is vast. It all depends on what
-      type of places you'd like to see. There are tons of world heritage sites and
-      history places, as well as natural scenary to be seen. Below is one of many
-      IG account which shows some photos of popular travel destinations to give you
-      some ideas.
-
-      <a href="https://www.instagram.com/travel2china88/"
-        >https://www.instagram.com/travel2china88/</a
-      >
-      <a
-        href="https://www.tripadvisor.com/Attractions-g298559-Activities-Hangzhou_Zhejiang.html"
-        >https://www.tripadvisor.com/Attractions-g298559-Activities-Hangzhou_Zhejiang.html</a
-      >
-      <a href="https://www.lonelyplanet.com/china/hangzhou/attractions"
-        >https://www.lonelyplanet.com/china/hangzhou/attractions</a
-      >
-      <br /><br />
-
-      <h3>Attractions in and around Hangzhou:</h3>
-      <br />
+      To get around in the city, you may use either public transport, or use an Uber-like
+      service. The main app for that is Didi.
       <ul>
-        <li>➤ West Lake (西湖)</li>
-        <li>➤ Lingyin Temple (灵隐寺)</li>
-        <li>➤ Leifeng Pagoda (雷峰塔)</li>
-        <li>➤ Xixi National Wetland Park (西溪国家湿地公园)</li>
-        <li>➤ Hefang Street (河坊街)</li>
-        <li>➤ Longjing Tea Plantations (龙井茶园)</li>
-        <li>➤ China National Silk Museum (中国丝绸博物馆)</li>
-        <li>➤ Grand Canal (京杭大运河)</li>
+        <li>
+          ➤ Didi <strong>[Highly Recommended]</strong>
+          <ul>
+            <li>
+              ➤ "Uber of China". Useful for calling cars to get around the city
+            </li>
+            <li>
+              ➤ Uber does not work in China market, so Didi is the main choice
+            </li>
+          </ul>
+        </li>
+        <li>
+          ➤ Metro/Subway
+          <ul>
+            <li>➤ Hangzhou has a good subway system</li>
+            <li>
+              ➤ You can use the Transit Feature in Alipay and present your
+              transit QR code at the fare gate scanner when riding subways and
+              buses.
+            </li>
+          </ul>
+        </li>
+        <br />
+
+        <h3>Navigation Apps</h3>
+        <br />
+        Although Google Maps works if you're using VPN, the map may not be as accurate,
+        and there may not be as much local data.
+        <br />
+        Alternative, Apple Maps works well in China. But the best ones are Gaode
+        and Baidu Maps for local map and navigation.
+        <ul>
+          <li>➤ Gaode Maps 高德地图</li>
+          <li>➤ Baidu Maps 百度地图</li>
+        </ul>
+        <br />
+
+        <h3>Tourism</h3>
+        <br />
+        China is huge, so varieties of places to visit is vast. It all depends on
+        what type of places you'd like to see. There are tons of world heritage sites
+        and history places, as well as natural scenary to be seen. Here are some
+        ideas.
+        <ul>
+          <li>
+            ➤ <a
+              href="https://www.tripadvisor.com/Attractions-g298559-Activities-Hangzhou_Zhejiang.html"
+              >Tripadvisor: Things to Do in Hangzhou</a
+            >
+          </li>
+          <li>
+            ➤ <a
+              href="https://www.lonelyplanet.com/destinations/china/zhejiang/hangzhou"
+              >Lonely Planets: Hangzhou</a
+            >
+          </li>
+          <li>
+            ➤ <a href="https://www.instagram.com/hangzhou_guide/"
+              >Instagram: Hangzhou Guide</a
+            >
+          </li>
+          <li>
+            ➤ <a href="https://www.instagram.com/hangzhou_china/"
+              >Instagram: Hangzhou China</a
+            >
+          </li>
+          <li>
+            ➤ <a href="https://www.instagram.com/china.travels/"
+              >Instagram: China Travels</a
+            >
+          </li>
+        </ul>
+        <br />
+
+        <h3>Attractions in and around Hangzhou:</h3>
+        <br />
+        <ul>
+          <li>➤ West Lake (西湖)</li>
+          <li>➤ Lingyin Temple (灵隐寺)</li>
+          <li>➤ Leifeng Pagoda (雷峰塔)</li>
+          <li>➤ Xixi National Wetland Park (西溪国家湿地公园)</li>
+          <li>➤ Hefang Street (河坊街)</li>
+          <li>➤ Longjing Tea Plantations (龙井茶园)</li>
+          <li>➤ China National Silk Museum (中国丝绸博物馆)</li>
+          <li>➤ Grand Canal (京杭大运河)</li>
+        </ul>
       </ul>
     </div>
-  </section>
 
-  <section
-    class="section section-big-image"
-    data-theme-section="light"
-    data-bg-section="lightgray"
-  >
-    <div class="container wide" id="china-essentials-map">
-      <div class="row">
-        <div class="col">
-          <OpenStreetMap
-            mapCenter={{ latitude: 30.172599, longitude: 120.102973 }}
-            mapZoom={10}
-            markers={mapMarkers}
-            height="350px"
-          />
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section
-    class="section section-location-info"
-    data-theme-section="light"
-    data-bg-section="lightgray"
-  >
-    <div class="container wide">
-      <div class="row grid">
-        <div class="col col-info">
-          <div class="location-flex">
-            <p>{subtitle}</p>
-            <h2>{title}</h2>
-            <p>{location}</p>
+    <section
+      class="section section-big-image"
+      data-theme-section="light"
+      data-bg-section="lightgray"
+    >
+      <div class="container wide" id="china-essentials-map">
+        <div class="row">
+          <div class="col">
+            <OpenStreetMap
+              mapCenter={{ latitude: 30.172599, longitude: 120.102973 }}
+              mapZoom={10}
+              markers={mapMarkers}
+              height="350px"
+            />
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <style>
-    /* Increase specificity to override resets */
-    .container ul {
-      list-style-type: disc !important;
-      margin-left: 2em !important;
-      padding-left: 0 !important;
-    }
-    .container ul li::marker {
-      color: #222;
-      font-size: 1em;
-    }
-  </style>
+    <section
+      class="section section-location-info"
+      data-theme-section="light"
+      data-bg-section="lightgray"
+    >
+      <div class="container wide">
+        <div class="row grid">
+          <div class="col col-info">
+            <div class="location-flex">
+              <p>{subtitle}</p>
+              <h2>{title}</h2>
+              <p>{location}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <style>
+      /* Increase specificity to override resets */
+      .container ul {
+        list-style-type: disc !important;
+        margin-left: 1em !important;
+        padding-left: 0 !important;
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
+      }
+      .container ul li::marker {
+        color: #222;
+        font-size: 1em;
+      }
+    </style>
+  </section>
 </Layout>
