--- a/src/pages/china-essentials.astro
+++ b/src/pages/china-essentials.astro
@@ -42,20 +42,20 @@ const mapMarkers = [
   title="China Travel Essentials – GOSIM Hangzhou 2025"
   description="Information about traveling to GOSIM Hangzhou 2025"
 >
-  <HeroText
-    title="China Essentials"
-    text=""
-  />
+  <HeroText title="China Essentials" text="" />
 
   <!-- Section 1: Before You Go -->
-  <section class="section speaker-detail-header" data-theme-section="light" data-bg-section="lightgray">
+  <section
+    class="section speaker-detail-header"
+    data-theme-section="light"
+    data-bg-section="light"
+  >
     <div class="container">
       <h2>✈️ Before You Go</h2>
       <br />
       It is recommended to either install an eSIM application on your phone before
       arriving, or upon arriving at the airport, to purchase a local China SIM card,
-      in order to stay connected during your stay in China. (Note that in USA newer
-      iPhones such as iPhone 14, etc. will not have a physical SIM card and can only
+      in order to stay connected during your stay in China. (Note that in USA some phones such as iPhone 14, etc. or newer will not have a physical SIM card and can only
       take eSIMs)
       <br /><br />
 
@@ -74,7 +74,11 @@ const mapMarkers = [
   </section>
 
   <!-- Section 2: Internet & VPN -->
-  <section class="section speaker-detail-header" data-theme-section="light" data-bg-section="light">
+  <section
+    class="section speaker-detail-header"
+    data-theme-section="light"
+    data-bg-section="lightgray"
+  >
     <div class="container">
       <h2>📶 Internet & VPN</h2>
       <br />
@@ -145,7 +149,11 @@ const mapMarkers = [
   </section>
 
   <!-- Section 3: Money & Payments -->
-  <section class="section speaker-detail-header" data-theme-section="light" data-bg-section="lightgray">
+  <section
+    class="section speaker-detail-header"
+    data-theme-section="light"
+    data-bg-section="light"
+  >
     <div class="container">
       <h2>💶 Money & Payments</h2>
       <br />
@@ -234,7 +242,11 @@ const mapMarkers = [
   </section>
 
   <!-- Section 4: Getting Around & Tourism -->
-  <section class="section speaker-detail-header" data-theme-section="light" data-bg-section="light">
+  <section
+    class="section speaker-detail-header"
+    data-theme-section="light"
+    data-bg-section="lightgray"
+  >
     <div class="container">
       <h2>📍 Getting Around</h2>
       <br />
@@ -271,8 +283,8 @@ const mapMarkers = [
       Although Google Maps works if you're using VPN, the map may not be as accurate,
       and there may not be as much local data.
       <br />
-      Alternative, Apple Maps works well in China. But the best ones are Gaode
-      and Baidu Maps for local map and navigation.
+      Alternative, Apple Maps works well in China. But the best ones are Gaode and
+      Baidu Maps for local map and navigation.
       <ul>
         <li>➤ Gaode Maps 高德地图</li>
         <li>➤ Baidu Maps 百度地图</li>
@@ -281,10 +293,9 @@ const mapMarkers = [
 
       <h3>Tourism</h3>
       <br />
-      China is huge, so varieties of places to visit is vast. It all depends on
-      what type of places you'd like to see. There are tons of world heritage sites
-      and history places, as well as natural scenary to be seen. Here are some
-      ideas.
+      China is huge, so varieties of places to visit is vast. It all depends on what
+      type of places you'd like to see. There are tons of world heritage sites and
+      history places, as well as natural scenary to be seen. Here are some ideas.
       <ul>
         <li>
           ➤ <a
@@ -334,7 +345,7 @@ const mapMarkers = [
   <section
     class="section section-big-image"
     data-theme-section="light"
-    data-bg-section="lightgray"
+    data-bg-section="light"
   >
     <div class="container wide" id="china-essentials-map">
       <div class="row">
@@ -353,7 +364,7 @@ const mapMarkers = [
   <section
     class="section section-location-info"
     data-theme-section="light"
-    data-bg-section="lightgray"
+    data-bg-section="light"
   >
     <div class="container wide">
       <div class="row grid">
