--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,62 +17,27 @@ const firstColumnLinks = [
     link: "/sponsors/",
   },
   {
-    text: "Conference Venue",
-    link: "/#venue",
+    text: "Spotlight",
+    link: "/#spotlight",
   },
   {
-    text: "Forum Venue",
-    link: "/os-ai-strategy-forum/#venue",
+    text: "Venue",
+    link: "/#venue",
   },
 ];
 
 const secondColumnLinks = [
   {
-    text: "Co-located Events",
-    subLinks: [
-      {
-        text: "GOSIM AI Spotlight",
-        link: "https://spotlight.gosim.org/ai2025",
-        openInNewTab: true,
-      },
-      {
-        text: "GOSIM Open-Source AI Strategy Forum",
-        link: "/os-ai-strategy-forum/",
-      },
-      {
-        text: "PyTorch Day France",
-        link: "https://events.linuxfoundation.org/pytorch-day-france/",
-        openInNewTab: true,
-      },
-      {
-        text: "Seeed Embodied AI Hackathon",
-        link: "https://lu.ma/7djaix39",
-        openInNewTab: true,
-      },
-    ],
+    text: "China Essentials",
+    link: "/china-essentials/",
   },
   {
-    text: "More",
-    subLinks: [
-      {
-        text: "Conference Venue",
-        link: "/#venue",
-        openInNewTab: true,
-      },
-      {
-        text: "Forum Venue",
-        link: "/os-ai-strategy-forum/#venue",
-      },
-      // {
-      //   text: "Volunteer",
-      //   link: "https://docs.google.com/forms/d/e/1FAIpQLSc62kJczw7lr-l0JAAbkabeIrrPPAD7OWyzwDopTD0L4HC6EQ/viewform",
-      //   openInNewTab: true,
-      // },
-      {
-        text: "Our Volunteers",
-        link: "/volunteers/",
-      },
-    ],
+    text: "General Travel Info",
+    link: "/general-travel/",
+  },
+  {
+    text: "Chinese Visa",
+    link: "/chinese-visa/",
   },
 ];
 
@@ -279,4 +244,4 @@ const slug = Astro.url.pathname;
       </div>
     </div>
   </div>
-</>
+</footer>
