--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -80,7 +80,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     data-theme-section="light"
     data-bg-section="lightgray"
   >
-    <div class="intro-statistics-container" style="display: grid; grid-template-columns: 1fr 1.5fr; gap: 0rem;">
+    <div class="intro-statistics-container" style="">
       <Intro>
         <h3 class="h3 light split-words animate-read">
           加入我们的GOSIM Hangzhou 2025，中国首屈一指的开源会议，这里是创新、协作和技术突破的汇聚之地。
