--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -21,6 +21,7 @@ const twoCards = cards?.length === 2;
 <section
     id={id}
     class="section section-home-why"
+    style="padding-bottom: 0;"
     data-theme-section="light"
     data-bg-section="lightgray"
 >
@@ -91,7 +92,7 @@ const twoCards = cards?.length === 2;
         gap: 1rem;
         align-items: center;
         justify-content: center;
-        height: 120px;
+        height: 100%;
         width: 100%;
     }
     .image-container {
@@ -105,6 +106,7 @@ const twoCards = cards?.length === 2;
         max-width: 100%;
         max-height: 100%;
         object-fit: contain;
+        border-radius: 16px;
     }
 </style>
 
