--- a/src/layouts/LayoutLanding.astro
+++ b/src/layouts/LayoutLanding.astro
@@ -1,7 +1,7 @@
 ---
 // Components
 import Header from "components/HeaderLanding.astro";
-import Footer from "components/FooterLanding.astro";
+import Footer from "components/Footer.astro";
 import Seo from "components/Seo.astro";
 
 // Styles
