--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -614,7 +614,7 @@
 
 .single-agenda-card .top .left .timeslot {
    flex-shrink: 0;
-   width: 9em;
+   width: 4em;
 }
 
 .single-agenda-card .top .left .timeslot p {
@@ -623,8 +623,8 @@
 }
 
 .single-agenda-card .bottom-wrap {
-   padding-left: 9em;
-   padding-right: 9em;
+   padding-left: 0;
+   padding-right: 1rem;
 }
 
 .single-agenda-card .bottom-content {
@@ -676,12 +676,12 @@
 @media screen and (max-width: 1080px) { 
 
    .single-agenda-card .top .left .timeslot {
-      width: 8em;
+      width: 2em;
    }
    
 
    .single-agenda-card .bottom-wrap {
-      padding-left: 8em;
+      padding-left: 0em;
       padding-right: 0;
    }
 }
@@ -1307,7 +1307,7 @@
    }
    
    .project-card {
-      background-color: rgba(249, 250, 251, 0.6);
+      background-color: #fff;
       border-radius: var(--border-radius);
       display: flex;
       flex-direction: column;
