--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -920,7 +920,7 @@ footer {
 @media screen and (max-width: 1024px) {
 
    .section-speakers-featured .row .col-title {
-      align-items: flex-start;
+      align-items: center;
    }
 
    .section-speakers-featured .flickity-slider-group {
@@ -1528,7 +1528,7 @@ footer {
 
 .section-speakers-grid .grid {
    padding-top: var(--section-padding);
-   --columns: 8;
+   --columns: 4;
 }
 
 @media screen and (max-width: 1024px) {
